--- a/Kmeans_SilhouetteScore.ipynb
+++ b/Kmeans_SilhouetteScore.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdsLiQF6QHecQyZ0WGcUBe",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN0rZzfyYSsW36PHAnrSCwC"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rajinipreethajohn/Clustering-KMeans-Silhouette/blob/main/Kmeans_SilhouetteScore.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -440,7 +429,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Conclusion: As seen above the silhouette score that is **closer to +1 is ideal** and therefore **we can choose n_clusters = 2** over others.\n",
+        "#**Conclusion:** As seen above the silhouette score that is **closer to +1 is ideal** and therefore **we can choose n_clusters = 2 or 4** over others.\n",
+        "\n",
+        "*-----------Note: K means elbow method in the above section also gave similar result.--------*\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "For n_clusters = 2 The average silhouette_score is : 0.7049787496083262\n",
         "\n",
@@ -467,15 +462,6 @@
       "metadata": {
         "id": "uNhga6G6X6KL"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "mLCBlsVUYKcy"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
