--- a/Kmeans_SilhouetteScore.ipynb
+++ b/Kmeans_SilhouetteScore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0rZzfyYSsW36PHAnrSCwC"
+      "authorship_tag": "ABX9TyMtTUFRbuUZPyqM+RrZMini"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,23 +23,6 @@
       "metadata": {
         "id": "BMRPjDo8T-1b"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import matplotlib.cm as cm\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "\n",
-        "from sklearn.cluster import KMeans\n",
-        "from sklearn.datasets import make_blobs\n",
-        "from sklearn.metrics import silhouette_samples, silhouette_score"
-      ],
-      "metadata": {
-        "id": "YF3Z6CkjUJJw"
-      },
-      "execution_count": 17,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -64,7 +47,29 @@
       "metadata": {
         "id": "6nunrWJpUo-c"
       },
-      "execution_count": 18,
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.cm as cm\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "import warnings\n",
+        "\n",
+        "# To ignore all warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.datasets import make_blobs\n",
+        "from sklearn.metrics import silhouette_samples, silhouette_score"
+      ],
+      "metadata": {
+        "id": "YF3Z6CkjUJJw"
+      },
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -93,39 +98,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 849
+          "height": 472
         },
         "id": "zSTYyJYi8O8D",
-        "outputId": "fcf7caf5-2876-45ef-ba67-b7199df059dd"
+        "outputId": "a6f83a76-656e-4683-c713-29dc6b25181f"
       },
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -149,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T-Edp_N4_5XX",
-        "outputId": "77ccfd4a-8e25-463b-efd8-5dd4b4459fbb"
+        "outputId": "adaa8613-794f-472e-fe55-ad75bb7f42c5"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +140,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 28
         }
       ]
     },
@@ -178,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bp3omcoHA4qV",
-        "outputId": "93850a16-fe4d-4445-d4eb-1a68764e3421"
+        "outputId": "d02b2d38-dda6-4fac-f2d4-6bcb4bba7027"
       },
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,14 +179,6 @@
             " 2 3 1 1 3 1 3 1 0 3 0 1 2 0 1 2 0 3 2 0 0 1 2 1 2 3 0 3 2 0 3 3 3 1 0 2 3\n",
             " 2 2 1 1 3 2 2 2 2 2 2 3 2 1 3 2 0 2 0 2 1 1 0 0 0 1 2 1 3 1 0 2 3 0 3 0 3\n",
             " 2 0 0 3 1 2 3 1 1 1 3 2 0 1 2 3 3 3 2]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
@@ -359,9 +330,9 @@
           "height": 1000
         },
         "id": "_6164XH-WKmD",
-        "outputId": "07c9ff5f-2f51-46bc-91ef-0cf909aa52a0"
+        "outputId": "8059d7c7-c712-4e35-b133-c3426fe7e6a3"
       },
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
